# openpmd_scipp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.ipynb  README.md  pyproject.toml  tox.ini
src/openpmd_scipp/: __init__.py  loader.py  mesh_loader.py  particle_loader.py  utils.py
test/: relay.py
tests/: integration_test.py
