[tool.poetry]
name = "openpmd-scipp"
version = "0.1.1"
description = ""
authors = ["Paweł Ordyna <p.ordyna@hzdr.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpmd-api = ">=0.15.2"
numpy = ">=1.15.0"
scipp = ">=24.9.1"

[tool.poetry.group.extras.dependencies]
plopp = ">=24.9.1"
notebook = ">=7.2.2"
ipywidgets = ">=8.1.5"
pythreejs = ">=2.4.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
nbmake = "^1.5.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
docformatter = "^1.7.5"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.docformatter]
recursive = true
pre-summary-space = true
wrap-summaries = 100
wrap-descriptions = 100

[tool.ruff]
line-length = 100  # Matches Black's line length
exclude = ["build", "dist", "__pycache__", ".data"]
select = ["E", "F", "B", "D"]  # Enable specific rule categories: Errors, Flake8, Bugbear, and Docstrings
ignore = ["E203"]  # Ignore E203 to avoid conflicts with Black's style
